--- a/electrical-motor-temperature.ipynb
+++ b/electrical-motor-temperature.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Hello ! \n",
     "\n",
-    "In this kernel, i will try to estimate a model that explains the torque and the stator_winding variables in the dataset. I will use correlation to be able to figure what are the variables that has the more effect on the two outputs (torque and stator_winding). This will help reduce the quantity of variables used and also simply the models which is always the best thing to do (the best models are the simplest models).\n",
+    "In this notebook, i will try to estimate a model that explains the torque and the stator_winding variables in the dataset. I will use correlation to be able to figure what are the variables that has the more effect on the two outputs (torque and stator_winding). This will help reduce the quantity of variables used and also simply the models which is always the best thing to do (the best models are the simplest models).\n",
     "I won't be splitting the datasets to training and testing datasets but i would rather use each profile as a seperate experiment and then compare the models' parameters estimated to see their consistency.\n",
     "\n",
     "Hope that you will enjoy my kernel !"
